channelsdir   = $(datadir)/freetuxtv/images/channels

channels_logodefault = _none.png

channels_logos = \
  1onairconnect.png \
  100pourcentradio.png \
  2mmaroc.png \
  ab1.png \
  abmoteurs.png \
  abudhabitv.png \
  accrotv.png \
  aci.png \
  action.png \
  adofm.png \
  aljazeera.png \
  aljazeerachildren.png \
  aljazeerainternational.png \
  almasriya.png \
  alouettefm.png \
  alsatictv.png \
  alsace20.png \
  america-free-tv.png \
  apsaratv.png \
  aptv.png \
  archeotv.png \
  argentquebec.png \
  armeniapublictv.png \
  armeniatv.png \
  arretsurimages.png \
  artchannel.png \
  arte.png \
  artplatv.png \
  astrocentertv.png \
  astv.png \
  aupradio.png \
  babylontv.png \
  bambochtv.png \
  baraem.png \
  bastilletv.png \
  bbc.png \
  bbcworld.png \
  bbcworldnews.png \
  beijingtv.png \
  bestofshopping.png \
  beurfm.png \
  beurtv.png \
  bfmradio.png \
  bfmtv.png \
  biscottetv.png \
  bloombergtv.png \
  boardriderstv.png \
  bulgariatv.png \
  c9.png \
  calaistv.png \
  canal10tucuman.png \
  canal26.png \
  canal4sanjuan.png \
  canal5tucuman.png \
  canal6posadas.png \
  canal9entrerios.png \
  canalacademie.png \
  canalalgerie.png \
  canalinfonews.png \
  canalmoza.png \
  canalplus.png \
  canalrural.png \
  canalsavoir.png \
  canaltv.png \
  cap24-paris.png \
  cashtv.png \
  cctv1.png \
  cctv2.png \
  cctv4.png \
  cctv7.png \
  cctv9.png \
  cctv10.png \
  cctv11.png \
  cctv12.png \
  cctvdivertissement.png \
  cctv_e.png \
  cctvf.png \
  channelonerussia-orti.png \
  chantefrance.png \
  cheriefm.png \
  chongqing_tv.png \
  cinefirst.png \
  cinefx.png \
  cinepolar.png \
  ckiafm.png \
  claptv.png \
  clermontpremiere.png \
  clubbingtv.png \
  cmusictv.png \
  cnbc.png \
  contactfm.png \
  corriland.png \
  couleur3-rsr.png \
  cpac.png \
  ct2e.png \
  demaintv.png \
  direct8.png \
  directstar.png \
  dubaitv.png \
  dwtv-deutschewelle.png \
  ekodesgarrigues.png \
  equidia.png \
  ertworld.png \
  euronews.png \
  europe1.png \
  espacefm.png \
  espacemusique.png \
  etbsat.png \
  evasionfm.png \
  extra3channel.png \
  fashiontv.png \
  fazzmusic.png \
  fcradiolessentiel.png \
  fip.png \
  flyfm.png \
  fmen.png \
  foxlife.png \
  france2.png \
  france24.png \
  france3.png \
  france4.png \
  france5.png \
  francebleu.png \
  franceculture.png \
  franceinfo.png \
  franceinter.png \
  francemusique.png \
  franceo.png \
  franceteleachat.png \
  francevivace.png \
  freenewstv.png \
  frequence3.png \
  frequenceindia.png \
  funradio.png \
  funtv.png \
  gameone.png \
  gameonemusichd.png \
  godtv.png \
  gong.png \
  grandlille_tv.png \
  grossecaisse.png \
  guangdongsoutherntv.png \
  gulli.png \
  guysentv.png \
  hebei_tv.png \
  heilongjiangtv.png \
  hilaltv.png \
  hiscore.png \
  hitmusictv.png \
  hitwest.png \
  hunansatellitetv.png \
  idf1.png \
  imedtv.png \
  infosport.png \
  inraci.png \
  inspirationnetwork.png \
  ishtartv.png \
  itelevision.png \
  jamzine.png \
  jazzradioblack.png \
  jazzradioblues.png \
  jazzradio-exfrequencejazz.png \
  jazzradioladies.png \
  jazzradiolounge.png \
  jazzradioreprises.png \
  jet.png \
  jordansatellitechannel.png \
  jpopsukitv.png \
  jukebox.png \
  kanal7int.png \
  kanal24.png \
  kanalavrupa.png \
  kiss-fm.png \
  kto.png \
  kuwaittv1.png \
  kuwaittv2.png \
  labelletv.png \
  lachainechinoise.png \
  lachainedejiangsu.png \
  lachaineparlementaire.png \
  lalocale.png \
  laradiodelamer.png \
  lcnquebec.png \
  lcm-marseille.png \
  lemouv.png \
  lequipetv.png \
  libertytv.png \
  localesidf.png \
  luxetv.png \
  m6.png \
  m6boutique.png \
  m6musicblack.png \
  m6musicclub.png \
  m6musichits.png \
  m6musicrock.png \
  mangas.png \
  mboatv.png \
  mce-ma_chaine_etudiante.png \
  mcm.png \
  mcmpop.png \
  mcmtop.png \
  medi1sat.png \
  metropolys.png \
  mezzo.png \
  mfm.png \
  mfmflashback.png \
  mfmserenite.png \
  mfmsexy.png \
  mixxradio.png \
  miziktropical.png \
  mjcapt.png \
  modem-radio.png \
  montecarlodoualiya.png \
  montereybayaquarium.png \
  mosaiquefm.png \
  mplusm.png \
  mtv.png \
  mtv2.png \
  mtvdance.png \
  mtvhits.png \
  musicplusclassicrock.png \
  musicplushits.png \
  musicpluspoprock.png \
  myzentv.png \
  nasatv.png \
  natgeomusic.png \
  nationalgeographic.png \
  nhk.png \
  nightmagcom.png \
  nolife.png \
  normandietv.png \
  nostalgie.png \
  nrj.png \
  nrj12.png \
  nrjhits.png \
  nrjnouveautes.png \
  nrjparis.png \
  nt1.png \
  nti.png \
  orangesportinfos.png \
  orleanstv.png \
  ouesttv.png \
  ouifm.png \
  oxyradio.png \
  ozradio.png \
  parispremiere.png \
  parentheseradio.png \
  phoenixchinesenewsandentertainment.png \
  phoenixinfonews.png \
  physiquetv.png \
  pokerchannel.png \
  powerturktv.png \
  presstv.png \
  publicsenat.png \
  purescreens.png \
  radio8.png \
  radiocean.png \
  radiocanada.png \
  radioclapas.png \
  radioclassique.png \
  radio-corsica.png \
  radioethic.png \
  radiofg.png \
  radiofgamerica.png \
  radiofgchic.png \
  radiofgclassics.png \
  radiofgdance.png \
  radiofgunderground.png \
  radioicietmaintenant.png \
  radiojunior.png \
  radiolatina.png \
  radiolibertaire.png \
  radiomelodie.png \
  radiomontblanc.png \
  radioneo.png \
  radionotredame.png \
  radionova.png \
  radioo.png \
  radiopublicsante.png \
  radioscoop80s.png \
  radio-scoop-powerdance.png \
  radioscoopmusicpod.png \
  radioscoop.png \
  radiosingsing.png \
  radiostar.png \
  radiosun.png \
  radio-tropicale.png \
  rai.png \
  raidue.png \
  railtv.png \
  raitre.png \
  raiuno.png \
  rbg.png \
  rdicanada.png \
  recordinternacional.png \
  relaxtv.png \
  renaulttv.png \
  reservoirfilms.png \
  rfi.png \
  rfm.png \
  rfo.png \
  rireetchansons.png \
  rkingtv.png \
  rmc.png \
  rmn.png \
  rne.png \
  rocktv.png \
  rossija24.png \
  rsr-suisse.png \
  rtbf.png \
  rtcgsat.png \
  rtcteleliege.png \
  rtl.png \
  rtl2.png \
  rtl9.png \
  rtpi.png \
  rtrplaneta.png \
  rtsfm.png \
  russiatoday.png \
  rve.png \
  sabcnews.png \
  samanyolutv.png \
  seebittv.png \
  shanghaidragontv.png \
  shenzhen_tv.png \
  skynews.png \
  skynewsinternational.png \
  skyrock.png \
  soleil_la_radio.png \
  soleiltv.png \
  souvenirfromearth.png \
  stlfm.png \
  sudradio.png \
  suroyotv.png \
  tele102.png \
  teleblagon.png \
  telegrenoble.png \
  telemelody.png \
  telenantes.png \
  telenight.png \
  telenova.png \
  teleplaisance.png \
  telessonne.png \
  telesur.png \
  televisionsavoir.png \
  telif.png \
  tempomix.png \
  teva.png \
  tf1.png \
  tfou.png \
  tfouwebtv.png \
  tllteleloire.png \
  tlm-lyon.png \
  tlt-toulouse.png \
  tmc.png \
  tna.png \
  tn.png \
  topmusic.png \
  tracetropical.png \
  tracetv.png \
  tropiquesfm.png \
  trt1.png \
  trtcocuk.png \
  trtint.png \
  tsfjazz.png \
  tv34.png \
  tv3cat-extvci.png \
  turnerclassicmovies.png \
  tv5.png \
  tv7bordeaux.png \
  tv7tunisia.png \
  tv8montblanc.png \
  tv8moselleest.png \
  tvaquebec.png \
  tvbiznes.png \
  tveint.png \
  tvfil78.png \
  tvmeurope-exrtm1-rtmmaroc.png \
  tvpi.png \
  tvpolonia-tvp.png \
  tvromania.png \
  tvsf.png \
  tvt.png \
  tvtours.png \
  tvvi.png \
  urbaniatv.png \
  vesti.png \
  vh1.png \
  vh1classic.png \
  vibration.png \
  videoclick.png \
  vietnam-vtv4.png \
  virgin17.png \
  virginradio.png \
  voltage.png \
  voxafrica.png \
  w9.png \
  weo.png \
  worldfashion.png \
  xiamenstartv.png \
  yementv.png \
  zahratv.png \
  zdf_de.png \
  zhejiangstartv.png \
  zona31.png

if LOGOS_INSTALL
channels_DATA = $(channels_logodefault) $(channels_logos)
else
channels_DATA = $(channels_logodefault)
endif

EXTRA_DIST   = $(channels_DATA)
